--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -4,16 +4,9 @@ job_details:
 parameters:
     model: ['layers=14_hidden-dim=576']
     accum_freq: [2]
-    LIST_BUDGETS_SCHEDS:
-      # - train_num_samples: [300000000] # ~300M, so *100 = 30B tokens
-      #   lr_scheduler: ['cosine', 'const-cooldown', 'hybrid-cooldown']
-        # epochs_cooldown: [5]
-      - train_num_samples: [400000000] # ~400M, so *100 = 40B tokens
-        lr_scheduler: ['const']
-        epochs_cooldown: [5]
-      # - train_num_samples: [385000000] # ~385M, so *100 = 38.5B tokens
-      #   lr_scheduler: ['const-cooldown', 'hybrid-cooldown']
-      #   epochs_cooldown: [5]
+    train_num_samples: [400000000] # ~400M, so *100 = 40B tokens
+    lr_scheduler: ['const']
+    epochs_cooldown: [5]
     warmup: [1000]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
@@ -31,9 +24,8 @@ parameters:
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    # lr_scheduler: ['cosine', 'const-cooldown', 'const', 'hybrid', 'hybrid-cooldown']
     wd: [0.033]
-    lr: [0.0015, 0.00212] # samir param
+    lr: [0.0015] 
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
