--- a/jobs/sidekick_runs_rerun.yaml
+++ b/jobs/sidekick_runs_rerun.yaml
@@ -5,15 +5,15 @@ parameters:
     model: ['layers=14_hidden-dim=576']
     accum_freq: [2]
     LIST_BUDGETS_SCHEDS:
-      - train_num_samples: [400000000] # ~300M, so *100 = 30B tokens
+      - train_num_samples: [400000000] # 400M, so *100 = 40B tokens
         epochs_cooldown: [5, 10, 20, 30]
-      - train_num_samples: [385000000] # ~400M, so *100 = 40B tokens
+      - train_num_samples: [385000000] # ~385M, so *100 = 38.5B tokens
         epochs_cooldown: [5]
-      - train_num_samples: [370000000] # ~400M, so *100 = 40B tokens
+      - train_num_samples: [370000000] # ~370M, so *100 = 37B tokens
         epochs_cooldown: [10]
-      - train_num_samples: [340000000] # ~400M, so *100 = 40B tokens
+      - train_num_samples: [340000000] # ~340M, so *100 = 34B tokens
         epochs_cooldown: [20]
-      - train_num_samples: [300000000] # ~385M, so *100 = 38.5B tokens
+      - train_num_samples: [300000000] # ~300M, so *100 = 30B tokens
         epochs_cooldown: [5, 10, 20, 30]
     warmup: [1000]
     dataset_resampled: [false]
@@ -32,7 +32,6 @@ parameters:
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    # lr_scheduler: ['cosine', 'const-cooldown', 'const', 'hybrid', 'hybrid-cooldown']
     wd: [0.033]
     LIST_LR_SCHEDS:
       - lr_scheduler: ['const-cooldown']
@@ -45,6 +44,5 @@ parameters:
     delete_previous_checkpoint: [true]
     keep_freq: [5]
     keep_from: [75]
-    # keep_powers_of_two: [5]
     workers: [2]
     averagers: ['poly_32_1']
