--- a/jobs/cosine_warmup.yaml
+++ b/jobs/cosine_warmup.yaml
@@ -1,12 +1,14 @@
 job_details:
-  name: cosine_warmup
+  name: cosine_warmup_v2
   output_dir: exps
 parameters:
     model: ['layers=14_hidden-dim=576']
     accum_freq: [2]
     train_num_samples: [100000000] # ~100M, so *100 = 10B tokens
-    lr_scheduler: ['cosine']
+    lr_scheduler: ['cosine-rewarmed']
     warmup: [250]
+    cosine_rewarmed_original_warmup: [1000]
+    cosine_rewarmed_target_steps: [152594] # manually calculated, 40B tokens
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     batch_size: [16]
@@ -24,15 +26,12 @@ parameters:
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    # lr_scheduler: ['cosine', 'const-cooldown', 'const', 'hybrid', 'hybrid-cooldown']
     wd: [0.033]
-    lr: [0.003] # samir param
+    lr: [0.003] # same as cosine for 40B, scheduler knows how to handle it
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
     delete_previous_checkpoint: [true]
     keep_freq: [5]
     keep_from: [75]
-    # keep_powers_of_two: [5]
     workers: [2]
-    # averagers: ['poly_64_1']
