--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,11 +1,11 @@
 job_details:
-  name: sidekick_runs_rerun_const
+  name: sidekick_runs_schedulefree
   output_dir: exps
 parameters:
     model: ['layers=14_hidden-dim=576']
     accum_freq: [2]
     train_num_samples: [400000000] # ~400M, so *100 = 40B tokens
-    lr_scheduler: ['const']
+    # lr_scheduler: ['const'] irrelevant, as we are using schedulefree
     epochs_cooldown: [5]
     warmup: [1000]
     dataset_resampled: [false]
@@ -15,7 +15,7 @@ parameters:
     log_every_n_steps: [20]
     csv_log: [true]
     grad_clip_norm: [1]
-    beta1: [0.9]
+    beta1: [0.9, 0.95, 0.98]
     beta2: [0.95]
     eps: [1.0e-08]
     report_to: ['wandb']
@@ -25,7 +25,7 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     wd: [0.033]
-    lr: [0.0015] 
+    lr: [0.03, 0.009] # X3 and X10 of cosine decay base lr. should we add 0.003?
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
@@ -34,4 +34,5 @@ parameters:
     keep_from: [50]
     # keep_powers_of_two: [5]
     workers: [2]
-    averagers: ['poly_32_1,poly_16_1']
+    schedulefree: [true]
+    skip_scheduler: [true]
