new models inbtween

--- a/jobs/sidekick_runs_eval.yaml
+++ b/jobs/sidekick_runs_eval.yaml
@@ -10,25 +10,35 @@ parameters:
     log_every_n_steps: [1]
     grad_clip_norm: [1]
     resume: [
-      'exps/24-04-03-sidekick_runs_debug/000_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=385000000+lr_sch=const-cooldown/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/001_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=385000000+lr_sch=const-cooldown/checkpoints/epoch_100.pt', 
-      'exps/24-04-03-sidekick_runs_debug/006_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=300000000+lr_sch=const-cooldown/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/007_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=300000000+lr_sch=const-cooldown/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/008_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=400000000+lr_sch=const/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/008_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=400000000+lr_sch=const/checkpoints/epoch_74.pt',
-      'exps/24-04-03-sidekick_runs_debug/009_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=400000000+lr_sch=const/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/009_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=400000000+lr_sch=const/checkpoints/epoch_74.pt',
-      'exps/24-04-03-sidekick_runs_debug/010_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=400000000+lr_sch=hybrid/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/010_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=400000000+lr_sch=hybrid/checkpoints/epoch_74.pt',
-      'exps/24-04-03-sidekick_runs_debug/011_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=400000000+lr_sch=hybrid/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/011_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=400000000+lr_sch=hybrid/checkpoints/epoch_74.pt',
-      'exps/24-04-03-sidekick_runs_debug/012_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=400000000+lr_sch=cosine/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/013_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=400000000+lr_sch=cosine/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/014_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=300000000+lr_sch=cosine/checkpoints/epoch_100.pt',
-      'exps/24-04-03-sidekick_runs_debug/015_24-04-03-sidekick_runs_debug+lr=0.00424+tra_num_sam=300000000+lr_sch=cosine/checkpoints/epoch_100.pt'
+      'exps/24-04-05-cosine_warmup_v2/000_24-04-05-cosine_warmup_v2+/checkpoints/epoch_100.pt',
+      'exps/24-04-04-cosine_warmup/000_24-04-04-cosine_warmup+/checkpoints/epoch_100.pt',
+      'exps/24-04-05-sidekick_runs_rerun_const/000_24-04-05-sidekick_runs_rerun_const+/checkpoints/epoch_100.pt',
+      'exps/24-04-05-sidekick_runs_rerun_const/000_24-04-05-sidekick_runs_rerun_const+/checkpoints/epoch_74.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/000_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=5+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/001_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=5+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/002_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=385000000+epo_coo=5+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/003_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=385000000+epo_coo=5+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/004_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=10+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/005_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=10+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/006_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=30+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/007_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=30+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/008_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=340000000+epo_coo=20+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/009_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=340000000+epo_coo=20+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/010_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=370000000+epo_coo=10+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/011_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=370000000+epo_coo=10+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/012_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=20+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/013_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=20+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/014_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=5+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/015_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=5+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/016_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=10+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/017_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=10+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/018_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=20+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/019_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=300000000+epo_coo=20+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/020_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=30+lr_sch=const-cooldown+lr=0.0015/checkpoints/epoch_100.pt',
+      'exps/24-04-04-sidekick_runs_rerun_cooldown/021_24-04-04-sidekick_runs_rerun_cooldown+tra_num_sam=400000000+epo_coo=30+lr_sch=hybrid-cooldown+lr=0.003/checkpoints/epoch_100.pt',
       ]
     data_key: ['json']
     qk_norm: [true]
     workers: [2]
-    # averagers: [ 'none']
+    averagers: ['poly_32_1', 'none']
     train_num_samples: [400000000]
