editting yaml files

--- a/jobs/long_runs_const_4_nodes.yaml
+++ b/jobs/long_runs_const_4_nodes.yaml
@@ -1,12 +1,12 @@
 job_details:
-  name: long_runs_const_4_nodes_correct_warmup
+  name: long_runs_const_4_nodes_warmup_vals
   output_dir: exps
   num_gpus: 4
   num_nodes: 4
 parameters:
     model: ['layers=18_hidden-dim=704', 'layers=23_hidden-dim=576', 'layers=26_hidden-dim=1312']
     train_num_samples: [426766791] # ~426M
-    warmup: [2000]
+    warmup: [200, 500]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     batch_size: [16]
@@ -25,7 +25,7 @@ parameters:
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['const']
     wd: [0.033]
-    lr: [6.0e-03, 3.0e-03, 1.5e-03]
+    lr: [3.0e-03]
     epochs: [64]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
