--- a/jobs/long_runs_const_4_nodes.yaml
+++ b/jobs/long_runs_const_4_nodes.yaml
@@ -1,10 +1,14 @@
 job_details:
-  name: long_runs_const_4_nodes_warmup_vals
+  name: long_runs_const_4_nodes_warmup_vals_2
   output_dir: exps
   num_gpus: 4
   num_nodes: 4
 parameters:
-    model: ['layers=18_hidden-dim=704', 'layers=23_hidden-dim=576', 'layers=26_hidden-dim=1312']
+    model: [
+      # 'layers=18_hidden-dim=704', 
+      'layers=23_hidden-dim=1024', 
+      'layers=26_hidden-dim=1312'
+      ]
     train_num_samples: [426766791] # ~426M
     warmup: [200, 500]
     dataset_resampled: [false]
@@ -33,5 +37,5 @@ parameters:
     keep_powers_of_two: [5]
     workers: [2]
     # averagers: ['poly_32_1,poly_64_1,poly_96_1,poly_64_100']
-    accum_freq: [2]
+    accum_freq: [4]
     averagers: ['poly_32_1,poly_32_100']
