--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,17 +1,23 @@
 job_details:
-  name: sidekick_runs_cosine_avg_sweep
+  name: sidekick_runs_schedulefree_wd_sweep
   output_dir: exps
+  num_gpus: 4
+  num_nodes: 2
 parameters:
     model: ['layers=14_hidden-dim=576']
     accum_freq: [2]
     train_num_samples: [400000000] # ~400M, so *100 = 40B tokens
-    lr_scheduler: ['cosine']
+    # lr_scheduler: ['cosine']
     warmup: [1000]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    global_batch_size: [128]
+    batch_size: [16]
     grad_checkpointing: [true]
-    log_every_n_steps: [20]
+    WD_LOG_LIST:
+      - wd: [0.001, 0.0033, 0.01, 0.033, 0.1, 0.33, 1.0]
+        log_every_n_steps: [20]
+      - wd: [0.033]
+        log_every_n_steps: [200]
     csv_log: [true]
     grad_clip_norm: [1]
     beta1: [0.9]
@@ -23,8 +29,8 @@ parameters:
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    wd: [0.033]
-    lr: [0.003]
+    
+    lr: [0.009]
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
@@ -34,8 +40,6 @@ parameters:
     # keep_powers_of_two: [5]
     workers: [2]
     averagers: [
-      'poly_32_1,poly_32_10,poly_32_100,poly_32_1000',
-      'poly_16_1,poly_16_10,poly_16_100,poly_16_1000',
-      'poly_08_1,poly_08_10,poly_08_100,poly_08_1000']
-    # schedulefree: [true]
-    # skip_scheduler: [true]
+      'poly_32_1,poly_32_100']
+    schedulefree: [true]
+    skip_scheduler: [true]
