--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -15,9 +15,9 @@ parameters:
     grad_checkpointing: [true]
     WD_LOG_LIST:
       - wd: [0.001, 0.0033, 0.01, 0.033, 0.1, 0.33, 1.0]
-        log_every_n_steps: [20]
+        log_avg_model_training_loss: [20]
       - wd: [0.033]
-        log_every_n_steps: [200]
+        log_avg_model_training_loss: [200]
     csv_log: [true]
     grad_clip_norm: [1]
     beta1: [0.9]
@@ -29,17 +29,15 @@ parameters:
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    
     lr: [0.009]
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
-    log_avg_model_training_loss: [20]
+    log_every_n_steps: [20]
     delete_previous_checkpoint: [true]
     keep_freq: [5]
     keep_from: [75]
     # keep_powers_of_two: [5]
     workers: [2]
-    averagers: [
-      'poly_32_1,poly_32_100']
+    averagers: ['poly_32_1,poly_32_100']
     schedulefree: [true]
     skip_scheduler: [true]
