--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,8 +1,8 @@
 job_details:
-  name: sidekick_runs_schedulefree_wd_sweep
+  name: sidekick_runs_schedulefree
   output_dir: exps
-  num_gpus: 4
-  num_nodes: 2
+  # num_gpus: 4
+  # num_nodes: 2
 parameters:
     model: ['layers=14_hidden-dim=576']
     accum_freq: [2]
@@ -13,23 +13,25 @@ parameters:
     precision: ['amp_bfloat16']
     batch_size: [16]
     grad_checkpointing: [true]
-    LIST_WD_LOG:
-      - wd: [0.001, 0.0033, 0.01, 0.033, 0.1, 0.33, 1.0]
-        log_avg_model_training_loss: [20]
-      - wd: [0.033]
-        log_avg_model_training_loss: [200]
+    # LIST_WD_LOG:
+    #   - wd: [0.001, 0.0033, 0.01, 0.033, 0.1, 0.33, 1.0]
+    #     log_avg_model_training_loss: [20]
+    #   - wd: [0.033]
+    #     log_avg_model_training_loss: [200]
     csv_log: [true]
     grad_clip_norm: [1]
-    beta1: [0.9]
+    wd: [0.033]
+    beta1: [0.9, 0.95, 0.98]
     beta2: [0.95]
     eps: [1.0e-08]
+    log_avg_model_training_loss: [20]
     report_to: ['wandb']
     resume: ['latest']
     data_key: ['json']
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr: [0.009]
+    lr: [0.03, 0.009, 0.003]
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_every_n_steps: [20]
