--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: sidekick_runs_schedulefree
+  name: sidekick_runs_schedulefree_log_every_100
   output_dir: exps
   # num_gpus: 4
   # num_nodes: 2
@@ -21,24 +21,24 @@ parameters:
     csv_log: [true]
     grad_clip_norm: [1]
     wd: [0.033]
-    LIST_BETA1_LR:
-      - lr: [0.009]
-        beta1: [0.9]
-      - lr: [0.009]
-        beta1: [0.95]
-      - lr: [0.003]
-        beta1: [0.98]
-    # beta1: [0.9, 0.95, 0.98]
+    # LIST_BETA1_LR:
+    #   - lr: [0.009]
+    #     beta1: [0.9]
+    #   - lr: [0.009]
+    #     beta1: [0.95]
+    #   - lr: [0.003]
+    #     beta1: [0.98]
+    beta1: [ 0.95]
     beta2: [0.95]
     eps: [1.0e-08]
-    log_avg_model_training_loss: [20]
+    log_avg_model_training_loss: [100]
     report_to: ['wandb']
     resume: ['latest']
     data_key: ['json']
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    # lr: [0.03, 0.009, 0.003]
+    lr: [0.009]
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_every_n_steps: [20]
