--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,52 +1,53 @@
 job_details:
-  name: sidekick_runs_schedulefree_log_every_100
+  name: sidekick_runs_top_4_on_new_shards
   output_dir: exps
-  # num_gpus: 4
-  # num_nodes: 2
 parameters:
     model: ['layers=14_hidden-dim=576']
     accum_freq: [2]
-    train_num_samples: [400000000] # ~400M, so *100 = 40B tokens
-    # lr_scheduler: ['cosine']
     warmup: [1000]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     batch_size: [16]
     grad_checkpointing: [true]
-    # LIST_WD_LOG:
-    #   - wd: [0.001, 0.0033, 0.01, 0.033, 0.1, 0.33, 1.0]
-    #     log_avg_model_training_loss: [20]
-    #   - wd: [0.033]
-    #     log_avg_model_training_loss: [200]
     csv_log: [true]
     grad_clip_norm: [1]
     wd: [0.033]
-    # LIST_BETA1_LR:
-    #   - lr: [0.009]
-    #     beta1: [0.9]
-    #   - lr: [0.009]
-    #     beta1: [0.95]
-    #   - lr: [0.003]
-    #     beta1: [0.98]
-    beta1: [ 0.95]
+    LIST_BUDGET_SCHED_AVGS:
+      - lr_scheduler: ['cosine'] # option 1
+        averagers: ['poly_16_1']
+        train_num_samples: [400000000] # 400M, so *100 = 40B tokens
+        epochs_cooldown: [0]
+      - lr_scheduler: ['cosine'] # option 2.5 - rewarmed later
+        averagers: ['none']
+        train_num_samples: [300000000] # 300M, so *100 = 30B tokens
+        epochs_cooldown: [0]
+      - lr_scheduler: ['hybrid-cooldown'] # option 5/10, 5/20
+        averagers: ['none']
+        train_num_samples: [300000000] # 300M, so *100 = 30B tokens
+        epochs_cooldown: [10, 20]
+      - lr_scheduler: ['hybrid-cooldown'] # option 5/10 - after resuming
+        averagers: ['none']
+        train_num_samples: [370000000] # 370M, so *100 = 37B tokens
+        epochs_cooldown: [10]
+      - lr_scheduler: ['hybrid-cooldown'] # option 5/20 - after resuming
+        averagers: ['none']
+        train_num_samples: [340000000] # 340M, so *100 = 34B tokens
+        epochs_cooldown: [20]
+    beta1: [0.9]
     beta2: [0.95]
     eps: [1.0e-08]
     log_avg_model_training_loss: [100]
     report_to: ['wandb']
     resume: ['latest']
-    data_key: ['json']
+    data_key: ['json.gz'] # using the new shards - changed train_data config in slurm script
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr: [0.009]
+    lr: [0.003]
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_every_n_steps: [20]
     delete_previous_checkpoint: [true]
     keep_freq: [5]
     keep_from: [75]
-    # keep_powers_of_two: [5]
     workers: [2]
-    # averagers: ['poly_32_1,poly_32_100']
-    schedulefree: [true]
-    skip_scheduler: [true]
