--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,8 +1,8 @@
 job_details:
-  name: sidekick_runs_top_4_on_new_shards
+  name: sidekick_runs_sparse_averaging
   output_dir: exps
 parameters:
-    model: ['layers=14_hidden-dim=576']
+    model: ['layers=14_hidden-dim=576'] # 86M params
     accum_freq: [2]
     warmup: [1000]
     dataset_resampled: [false]
@@ -11,28 +11,10 @@ parameters:
     grad_checkpointing: [true]
     csv_log: [true]
     grad_clip_norm: [1]
-    wd: [0.033]
-    LIST_BUDGET_SCHED_AVGS:
-      - lr_scheduler: ['cosine'] # option 1
-        averagers: ['poly_16_1']
-        train_num_samples: [400000000] # 400M, so *100 = 40B tokens
-        epochs_cooldown: [0]
-      - lr_scheduler: ['cosine'] # option 2.5 - rewarmed later
-        averagers: ['none']
-        train_num_samples: [300000000] # 300M, so *100 = 30B tokens
-        epochs_cooldown: [0]
-      - lr_scheduler: ['hybrid-cooldown'] # option 5/10, 5/20
-        averagers: ['none']
-        train_num_samples: [300000000] # 300M, so *100 = 30B tokens
-        epochs_cooldown: [10, 20]
-      - lr_scheduler: ['hybrid-cooldown'] # option 5/10 - after resuming
-        averagers: ['none']
-        train_num_samples: [370000000] # 370M, so *100 = 37B tokens
-        epochs_cooldown: [10]
-      - lr_scheduler: ['hybrid-cooldown'] # option 5/20 - after resuming
-        averagers: ['none']
-        train_num_samples: [340000000] # 340M, so *100 = 34B tokens
-        epochs_cooldown: [20]
+    wd: [0.33]
+    lr_scheduler: ['cosine'] # option 1
+    averagers: ['poly_16_100,poly_16_1000,poly_16_3000,poly_16_6000']
+    train_num_samples: [400000000] # 400M, so *100 = 40B tokens
     beta1: [0.9]
     beta2: [0.95]
     eps: [1.0e-08]
@@ -43,7 +25,7 @@ parameters:
     lr_cooldown_end: [0.0]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr: [0.003]
+    lr: [3.0e-04]
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_every_n_steps: [20]
