fixing sparse yaml

--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,9 +1,9 @@
 job_details:
-  name: sidekick_runs_sparse_averaging
+  name: sidekick_runs_sparse_averaging_dbg
   output_dir: exps
 parameters:
     model: ['layers=14_hidden-dim=576'] # 86M params
-    accum_freq: [2]
+    accum_freq: [1]
     warmup: [1000]
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
@@ -33,3 +33,4 @@ parameters:
     keep_freq: [5]
     keep_from: [75]
     workers: [2]
+    train_data: ["['/p/scratch/ccstdl/smyrnis1/rw_v2_fasttext_openhermes_vs_rw_v2_bigram_0.1/{00000005..00001747}.tar']"]
