--- a/jobs/sidekick_runs_eval.yaml
+++ b/jobs/sidekick_runs_eval.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: sidekick_runs_eval_coisine_warmup_v2_new_shards
+  name: sidekick_runs_eval_top_4_new_shards
   output_dir: exps
 parameters:
     model: ['layers=14_hidden-dim=576']
@@ -23,12 +23,16 @@ parameters:
       # 'exps/24-04-07-sidekick_runs_schedulefree/008_24-04-07-sidekick_runs_schedulefree+bet=0.98+lr=0.003/checkpoints/epoch_100.pt',
       # 'exps/24-04-13-sidekick_runs_schedulefree_log_every_100/000_24-04-13-sidekick_runs_schedulefree_log_every_100+/checkpoints/epoch_74.pt',
       # 'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_100.pt',
-      'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_74.pt',
-      'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_79.pt',
-      'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_84.pt',
-      'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_89.pt',
-      'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_94.pt',
-      'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_99.pt',
+      'exps/24-04-16-sidekick_runs_top_4_on_new_shards/000_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=hybrid-cooldown+ave=none+tra_num_sam=340000000+epo_coo=20/checkpoints/epoch_35.pt',
+      'exps/24-04-16-sidekick_runs_top_4_on_new_shards/002_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=hybrid-cooldown+ave=none+tra_num_sam=300000000+epo_coo=20/checkpoints/epoch_40.pt',
+      'exps/24-04-16-sidekick_runs_top_4_on_new_shards/003_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=cosine+ave=poly_16_1+tra_num_sam=400000000+epo_coo=0/checkpoints/epoch_30.pt',
+      'exps/24-04-16-sidekick_runs_top_4_on_new_shards/004_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=hybrid-cooldown+ave=none+tra_num_sam=370000000+epo_coo=10/checkpoints/epoch_33.pt',
+      'exps/24-04-16-sidekick_runs_top_4_on_new_shards/005_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=hybrid-cooldown+ave=none+tra_num_sam=300000000+epo_coo=10/checkpoints/epoch_40.pt'
+      # 'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_79.pt',
+      # 'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_84.pt',
+      # 'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_89.pt',
+      # 'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_94.pt',
+      # 'exps/24-04-15-cosine_warmup_v2_new_shards_/000_24-04-15-cosine_warmup_v2_new_shards_+/checkpoints/epoch_99.pt',
       ]
     data_key: ['json.gz']
     qk_norm: [true]
