--- a/jobs/long_runs_const_2_nodes.yaml
+++ b/jobs/long_runs_const_2_nodes.yaml
@@ -34,3 +34,4 @@ parameters:
     workers: [2]
     accum_freq: [2]
     averagers: ['poly_32_1,poly_32_100,poly_64_1']
+    train_data: ["/p/scratch/ccstdl/smyrnis1/rw_v2_fasttext_openhermes_vs_rw_v2_bigram_0.1/{00000005..00001747}.tar"]
