--- a/jobs/long_runs_const_4_nodes.yaml
+++ b/jobs/long_runs_const_4_nodes.yaml
@@ -39,3 +39,4 @@ parameters:
     # averagers: ['poly_32_1,poly_64_1,poly_96_1,poly_64_100']
     accum_freq: [4]
     averagers: ['poly_32_1,poly_32_100']
+    train_data: ["/p/scratch/ccstdl/smyrnis1/rw_v2_fasttext_openhermes_vs_rw_v2_bigram_0.1/{00000005..00001747}.tar"]
