--- a/jobs/sidekick_runs.yaml
+++ b/jobs/sidekick_runs.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: sidekick_runs_sparse_averaging_laionize
+  name: sidekick_runs_sparse_averaging
   output_dir: exps
   num_gpus: 4
   num_nodes: 2
@@ -35,4 +35,4 @@ parameters:
     keep_freq: [5]
     keep_from: [75]
     workers: [2]
-    # train_data: ["['/p/scratch/ccstdl/smyrnis1/rw_v2_fasttext_openhermes_vs_rw_v2_bigram_0.1/{00000005..00001747}.tar']"]
+    train_data: ["/p/scratch/ccstdl/smyrnis1/rw_v2_fasttext_openhermes_vs_rw_v2_bigram_0.1/{00000005..00001747}.tar"]
