--- a/jobs/batch_size_comparison.yaml
+++ b/jobs/batch_size_comparison.yaml
@@ -1,36 +1,51 @@
 job_details:
-  name: batch_size_comparison_1_node
+  name: batch_size_comparison_100_period_2_nodes
   output_dir: exps
-  num_gpus: 4
-  num_nodes: 1
+  # num_gpus: 4
+  # num_nodes: 1
 parameters:
-    # LIST_MODELS_ACC:
-    #   - model: ['layers=8_hidden-dim=704']
-    #     accum_freq: [1]
-    #     batch_size: [4,8,12,16]
-    #   - model: ['layers=23_hidden-dim=1024']
-    #     accum_freq: [1]
-    #     batch_size: [4,8,12]
-    #   - model: ['layers=23_hidden-dim=1024']
-    #     accum_freq: [2]
-    #     batch_size: [16]
-    #   - model: ['layers=26_hidden-dim=1312']
-    #     accum_freq: [1]
-    #     batch_size: [4]
-    #   - model: ['layers=26_hidden-dim=1312']
-    #     accum_freq: [2]
-    #     batch_size: [8,12]
-    #   - model: ['layers=26_hidden-dim=1312']
-    #     accum_freq: [4]
-    #     batch_size: [16]
-    LIST_MODEL_BS:
+    LIST_MODELS_ACC:
+      - model: ['layers=8_hidden-dim=288']
+        accum_freq: [1]
+        batch_size: [8]
+      - model: ['layers=8_hidden-dim=288']
+        accum_freq: [2]
+        batch_size: [16]
+      - model: ['layers=9_hidden-dim=320']
+        accum_freq: [1]
+        batch_size: [8]
+      - model: ['layers=9_hidden-dim=320']
+        accum_freq: [2]
+        batch_size: [16]
+      - model: ['layers=10_hidden-dim=384']
+        accum_freq: [1]
+        batch_size: [8]
+      - model: ['layers=10_hidden-dim=384']
+        accum_freq: [2]
+        batch_size: [16]
+      - model: ['layers=12_hidden-dim=480']
+        accum_freq: [1]
+        batch_size: [8]
+      - model: ['layers=12_hidden-dim=480']
+        accum_freq: [2]
+        batch_size: [16]
       - model: ['layers=14_hidden-dim=576']
-        batch_size: [5]
-      - model: ['layers=18_hidden-dim=704']
-        batch_size: [5]
+        accum_freq: [1]
+        batch_size: [8]
+      - model: ['layers=14_hidden-dim=576']
+        accum_freq: [2]
+        batch_size: [16]
+      - model: ['layers=15_hidden-dim=640']
+        accum_freq: [1]
+        batch_size: [8]
+      - model: ['layers=15_hidden-dim=640']
+        accum_freq: [2]
+        batch_size: [16]
+    averagers: ['poly_32_100']
+    # accum_freq: [1]
     train_num_samples: [100000000] # ~100M
     warmup: [200]
-    accum_freq: [1]
+    
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
     grad_checkpointing: [true]
@@ -42,7 +57,7 @@ parameters:
     eps: [1.0e-08]
     report_to: ['wandb']
     resume: ['latest']
-    data_key: ['json']
+    data_key: ['json.gz']
     lr_cooldown_end: [3.0e-05]
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
@@ -54,5 +69,6 @@ parameters:
     log_avg_model_training_loss: [20]
     delete_previous_checkpoint: [true]
     # keep_powers_of_two: [5]
+    
     workers: [2]
     train_data: ["/p/scratch/ccstdl/smyrnis1/rw_v2_fasttext_openhermes_vs_rw_v2_bigram_0.1/{00000005..00001747}.tar"]
