--- a/jobs/cosine_warmup.yaml
+++ b/jobs/cosine_warmup.yaml
@@ -1,9 +1,9 @@
 job_details:
-  name: cosine_warmup_v2_new_shards
+  name: cosine_warmup_v2_new_shards_bs_64
   output_dir: exps
 parameters:
     model: ['layers=14_hidden-dim=576']
-    accum_freq: [2]
+    accum_freq: [1]
     train_num_samples: [100000000] # ~100M, so *100 = 10B tokens
     lr_scheduler: ['cosine-rewarmed']
     warmup: [250]
@@ -11,12 +11,12 @@ parameters:
     cosine_rewarmed_target_steps: [152594] # manually calculated, 40B tokens
     dataset_resampled: [false]
     precision: ['amp_bfloat16']
-    batch_size: [16]
+    batch_size: [8]
     grad_checkpointing: [true]
     log_every_n_steps: [20]
     csv_log: [true]
     grad_clip_norm: [1]
-    pretrained: ['exps/24-04-03-sidekick_runs_debug/014_24-04-03-sidekick_runs_debug+lr=0.003+tra_num_sam=300000000+lr_sch=cosine/checkpoints/epoch_100.pt']
+    pretrained: ['exps/24-04-16-sidekick_runs_top_4_on_new_shards/001_24-04-16-sidekick_runs_top_4_on_new_shards+lr_sch=cosine+ave=none+tra_num_sam=300000000+epo_coo=0/checkpoints/epoch_100.pt']
     beta1: [0.9]
     beta2: [0.95]
     eps: [1.0e-08]
@@ -27,7 +27,7 @@ parameters:
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
     wd: [0.033]
-    lr: [0.003] # same as cosine for 40B, scheduler knows how to handle it
+    lr: [0.003, 0.00212, 0.0015] # same as cosine for 40B, scheduler knows how to handle it
     epochs: [100]
     wandb_project_name: ['lm_grid_160m_more_avgs']
     log_avg_model_training_loss: [20]
