scripts (will be changed to refined web)

--- a/jobs/batch_size_comparison.yaml
+++ b/jobs/batch_size_comparison.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: batch_size_comparison_100_period_2_nodes
+  name: batch_size_comparison_100_period_1_nodes_2
   output_dir: exps
   # num_gpus: 4
   # num_nodes: 1
@@ -8,40 +8,40 @@ parameters:
       - model: ['layers=8_hidden-dim=288']
         accum_freq: [1]
         batch_size: [8]
-      - model: ['layers=8_hidden-dim=288']
-        accum_freq: [2]
-        batch_size: [16]
-      - model: ['layers=9_hidden-dim=320']
-        accum_freq: [1]
-        batch_size: [8]
-      - model: ['layers=9_hidden-dim=320']
-        accum_freq: [2]
-        batch_size: [16]
-      - model: ['layers=10_hidden-dim=384']
-        accum_freq: [1]
-        batch_size: [8]
-      - model: ['layers=10_hidden-dim=384']
-        accum_freq: [2]
-        batch_size: [16]
-      - model: ['layers=12_hidden-dim=480']
-        accum_freq: [1]
-        batch_size: [8]
-      - model: ['layers=12_hidden-dim=480']
-        accum_freq: [2]
-        batch_size: [16]
-      - model: ['layers=14_hidden-dim=576']
-        accum_freq: [1]
-        batch_size: [8]
-      - model: ['layers=14_hidden-dim=576']
-        accum_freq: [2]
-        batch_size: [16]
-      - model: ['layers=15_hidden-dim=640']
-        accum_freq: [1]
-        batch_size: [8]
-      - model: ['layers=15_hidden-dim=640']
-        accum_freq: [2]
-        batch_size: [16]
-    averagers: ['poly_32_100']
+      # - model: ['layers=8_hidden-dim=288']
+      #   accum_freq: [2]
+      #   batch_size: [16]
+      # - model: ['layers=9_hidden-dim=320']
+      #   accum_freq: [1]
+      #   batch_size: [8]
+      # - model: ['layers=9_hidden-dim=320']
+      #   accum_freq: [2]
+      #   batch_size: [16]
+      # - model: ['layers=10_hidden-dim=384']
+      #   accum_freq: [1]
+      #   batch_size: [8]
+      # - model: ['layers=10_hidden-dim=384']
+      #   accum_freq: [2]
+      #   batch_size: [16]
+      # - model: ['layers=12_hidden-dim=480']
+      #   accum_freq: [1]
+      #   batch_size: [8]
+      # - model: ['layers=12_hidden-dim=480']
+      #   accum_freq: [2]
+      #   batch_size: [16]
+      # - model: ['layers=14_hidden-dim=576']
+      #   accum_freq: [1]
+      #   batch_size: [8]
+      # - model: ['layers=14_hidden-dim=576']
+      #   accum_freq: [2]
+      #   batch_size: [16]
+      # - model: ['layers=15_hidden-dim=640']
+      #   accum_freq: [1]
+      #   batch_size: [8]
+      # - model: ['layers=15_hidden-dim=640']
+      #   accum_freq: [2]
+      #   batch_size: [16]
+    averagers: ['poly_32_1']
     # accum_freq: [1]
     train_num_samples: [100000000] # ~100M
     warmup: [200]
@@ -66,7 +66,7 @@ parameters:
     lr: [0.003]
     epochs: [1]
     wandb_project_name: ['lm_grid_160m_more_avgs']
-    log_avg_model_training_loss: [20]
+    log_avg_model_training_loss: [100]
     delete_previous_checkpoint: [true]
     # keep_powers_of_two: [5]
     
