--- a/jobs/bs_loss_comp_small.yaml
+++ b/jobs/bs_loss_comp_small.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: bs_comparison_RW
+  name: bs_comparison_RW_3
   output_dir: exps
   # num_nodes: 1
   # num_gpus: 4
@@ -17,12 +17,12 @@ parameters:
       - model: ['layers=6_hidden-dim=224']
         accum_freq: [1]
         train_num_samples: [14900000] # 14.9M, so x10 = 149M
-      # - model: ['layers=8_hidden-dim=288'] # later - limit jobs
-      #   accum_freq: [1] # might need to change
-      #   train_num_samples: [22500000] # 22.5M, so x10 = 225M
-      # - model: ['layers=9_hidden-dim=320'] # later - limit jobs
-      #   accum_freq: [1] # might need to change
-      #   train_num_samples: [27200000] # 27.2M, so x10 = 272M
+      - model: ['layers=8_hidden-dim=288'] # later - limit jobs
+        accum_freq: [1] # might need to change
+        train_num_samples: [22500000] # 22.5M, so x10 = 225M
+      - model: ['layers=9_hidden-dim=320'] # later - limit jobs
+        accum_freq: [1] # might need to change
+        train_num_samples: [27200000] # 27.2M, so x10 = 272M
     LIST_BS_LR:
       - batch_size: [16]
         lr: [0.00848, 0.006, 0.00424, 0.003]
@@ -32,8 +32,8 @@ parameters:
         lr: [0.00424, 0.003, 0.00212, 0.0015]
       - batch_size: [2]
         lr: [0.003, 0.00212, 0.0015, 0.00106]
-      # - batch_size: [1] # later
-      #   lr: [0.00212, 0.0015, 0.00106, 0.00075]
+      - batch_size: [1] 
+        lr: [0.00212, 0.0015, 0.00106, 0.00075]
     lr_scheduler: ['cosine']
     warmup: [200]
     dataset_resampled: [false]
@@ -60,5 +60,5 @@ parameters:
     # keep_from: [75]
     workers: [2]
     train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00000011..00042512}.tar"]
-    flops_to_save: ["1e15,1e16"] # test
-    max_checkpoints_flops: [1] # test
+    # flops_to_save: ["1e15,1e16"] # test
+    # max_checkpoints_flops: [1] # test
