--- a/jobs/bs_loss_comp_small.yaml
+++ b/jobs/bs_loss_comp_small.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: bs_comparison_RW_3
+  name: bs_comparison_RW_4
   output_dir: exps
   # num_nodes: 1
   # num_gpus: 4
@@ -23,6 +23,12 @@ parameters:
       - model: ['layers=9_hidden-dim=320'] # later - limit jobs
         accum_freq: [1] # might need to change
         train_num_samples: [27200000] # 27.2M, so x10 = 272M
+      - model: ['layers=10_hidden-dim=384'] # later - limit jobs
+        accum_freq: [1] # might need to change
+        train_num_samples: [74121216] # 74.1M, so x10 = 741.2M
+      - model: ['layers=12_hidden-dim=480'] # later - limit jobs
+        accum_freq: [1] # might need to change
+        train_num_samples: [114769920] # 114.8M, so x10 = 1.148B
     LIST_BS_LR:
       - batch_size: [16]
         lr: [0.00848, 0.006, 0.00424, 0.003]
@@ -59,6 +65,6 @@ parameters:
     # keep_freq: [5]
     # keep_from: [75]
     workers: [2]
-    train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00000011..00042512}.tar"]
-    # flops_to_save: ["1e15,1e16"] # test
-    # max_checkpoints_flops: [1] # test
+    train_data: ["/p/scratch/laionize/smyrnis1/refined_web_tokenized/{00001001..00042512}.tar"]
+    # flops_to_save: ['2.00e+15,4.00e+15,8.00e+15,1.60e+16,3.20e+16,6.40e+16,1.28e+17,2.56e+17,5.12e+17,1.02e+18,2.05e+18,4.10e+18,8.19e+18,1.64e+19,3.28e+19,6.55e+19']
+    # max_checkpoints_flops: [5] 
