bs sweep part 2

--- a/jobs/bs_loss_comp_small.yaml
+++ b/jobs/bs_loss_comp_small.yaml
@@ -1,34 +1,34 @@
 job_details:
-  name: bs_comparison_RW_10%_warmup_higher_lr_1
+  name: bs_comparison_RW_10%_warmup_higher_lr_2
   output_dir: exps
   # num_nodes: 1
   # num_gpus: 4
 parameters:
     LIST_ACC_BS:
-      - model: ['layers=3_hidden-dim=96']
-        accum_freq: [1]
-        train_num_samples: [5170000] # 5.17M, so x10 = 51.7M
-        warmup_tokens: [5170000] # ~620 steps with global_bs=4, 10% of 51.7M
-      - model: ['layers=4_hidden-dim=128']
-        accum_freq: [1]
-        train_num_samples: [7240000] # 7.24M, so x10 = 72.4M
-        warmup_tokens: [7240000]
-      - model: ['layers=5_hidden-dim=160']
-        accum_freq: [1]
-        train_num_samples: [9610000] # 9.61M, so x10 = 96.1M
-        warmup_tokens: [9610000]
-      # - model: ['layers=6_hidden-dim=224'] # later - limit jobs
+      # - model: ['layers=3_hidden-dim=96']
       #   accum_freq: [1]
-      #   train_num_samples: [14900000] # 14.9M, so x10 = 149M
-      #   warmup_tokens: [14900000]
-      # - model: ['layers=8_hidden-dim=288'] # later - limit jobs
-      #   accum_freq: [1] # might need to change
-      #   train_num_samples: [22500000] # 22.5M, so x10 = 225M
-      #   warmup_tokens: [22500000]
-      # - model: ['layers=9_hidden-dim=320'] # later - limit jobs
-      #   accum_freq: [1] # might need to change
-      #   train_num_samples: [27200000] # 27.2M, so x10 = 272M
-      #   warmup_tokens: [27200000]
+      #   train_num_samples: [5170000] # 5.17M, so x10 = 51.7M
+      #   warmup_tokens: [5170000] # ~620 steps with global_bs=4, 10% of 51.7M
+      # - model: ['layers=4_hidden-dim=128']
+      #   accum_freq: [1]
+      #   train_num_samples: [7240000] # 7.24M, so x10 = 72.4M
+      #   warmup_tokens: [7240000]
+      # - model: ['layers=5_hidden-dim=160']
+      #   accum_freq: [1]
+      #   train_num_samples: [9610000] # 9.61M, so x10 = 96.1M
+      #   warmup_tokens: [9610000]
+      - model: ['layers=6_hidden-dim=224'] # later - limit jobs
+        accum_freq: [1]
+        train_num_samples: [14900000] # 14.9M, so x10 = 149M
+        warmup_tokens: [14900000]
+      - model: ['layers=8_hidden-dim=288'] # later - limit jobs
+        accum_freq: [1] # might need to change
+        train_num_samples: [22500000] # 22.5M, so x10 = 225M
+        warmup_tokens: [22500000]
+      - model: ['layers=9_hidden-dim=320'] # later - limit jobs
+        accum_freq: [1] # might need to change
+        train_num_samples: [27200000] # 27.2M, so x10 = 272M
+        warmup_tokens: [27200000]
       # - model: ['layers=10_hidden-dim=384'] # later - limit jobs (or remove)
       #   accum_freq: [1] # might need to change
       #   train_num_samples: [74121216] # 74.1M, so x10 = 741.2M
